added swagger + update postman + fix test
